tests/fixtures/valid/crazy/builtins/all.py
# Valid all() calls
# Auto-generated by scripts/generate_tests.py

b0_all_str = all("hello")
b1_all_bytes = all(b"hello")
b2_all_list = all([1, 2, 3])
b3_all_dict = all({"a": 1})
b4_all_set = all({1, 2, 3})

print("all() tests passed!")
