tests/fixtures/invalid/divmod_dict_list.py
# Cannot call divmod() with Dict[str, int], List[int]
x = divmod({"a": 1}, [1, 2, 3])
